[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "fusekit"
version = "0.1.0"
description = "Fuse — find where your system breaks, before it does."
readme = "README.md"
license = "AGPL-3.0-or-later"
requires-python = ">=3.9"
authors = [
    {name = "Forgotten Forge", email = "nfo@forgottenforge.xyz"},
]
keywords = ["tipping-point", "stability", "phase-transition", "critical-point", "data-analysis"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",

    "Programming Language :: Python :: 3",
    "Topic :: Scientific/Engineering",
]
dependencies = [
    "numpy>=1.22",
    "scipy>=1.9",
    "matplotlib>=3.6",
    "pandas>=1.5",
]

[project.urls]
Homepage = "https://www.forgottenforge.xyz"
Repository = "https://github.com/forgottenforge/fusekit"
Documentation = "https://github.com/forgottenforge/fusekit#readme"

[tool.setuptools.packages.find]
include = ["fusekit*"]
